Fix #16 Reduce spacing on unordered lists

--- a/less/course.less
+++ b/less/course.less
@@ -1,7 +1,7 @@
 div#region-main {
     padding-top: 14px;
     padding-bottom: 1px;
-    ul, ol {
+    ul:not(.topics):not(.section), ol {
         margin-left: @list-margin-adjustment;
     }
 }
