--- a/style/stellar.css
+++ b/style/stellar.css
@@ -17590,7 +17590,7 @@ div#region-main {
   padding-top: 14px;
   padding-bottom: 1px;
 }
-div#region-main ul,
+div#region-main ul:not(.topics):not(.section),
 div#region-main ol {
   margin-left: 30px;
 }
